--- a/.github/workflows/run_web.yml
+++ b/.github/workflows/run_web.yml
@@ -2,13 +2,15 @@ name: Gh-Pages
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2 # Only works with v2
       - uses: subosito/flutter-action@v1
-      - uses: erickzanardo/flutter-gh-pages@v3
+      - uses: bluefireteam/flutter-gh-pages@v7
+        with:
+            baseHref: /Flutter-Responsive-Admin-Panel-or-Dashboard/
